# tauri-application-react

./: .gitignore  README.md  package-lock.json  package.json  translations.csv
.github/workflows/: docs-pages.yml  tauri-react.yml  tauri-svelte.yml
apps/web-react/: package.json  vite.config.ts
apps/web-react/src/app/: App.tsx
apps/web-react/src/lib/: app-shell-icons.tsx  app-shell.ts
apps/web-react/src/locales/: cs.json  en.json  es.json  (+1 more)
apps/web-svelte/src/: App.svelte
docs/: hugo.toml
docs/assets/css/: site.css
docs/content/: _index.md
docs/content/docs/: _index.md  architecture.md  ci-todo.md  discussion-summary.md  ephemeris-manager.md  frontend-react.md  frontend-svelte.md  implementation-plan.md  integration-examples.md  physical-properties.md  python-package.md  spice-backend.md  tauri-command-contracts.md  time-navigation.md  ui-conventions.md
docs/content/llm/: _index.md  continuation-guide.md  frontend-gap-implementation-plan.md  frontend-workflow-baseline.md  import-chart-contract.md  project-context.md  radix-render-contract.md  rust-workspace-contract.md  specs-workflow.md
docs/layouts/_default/: baseof.html  list.html  single.html
docs/public/: index.html
docs/public/docs/: index.html
docs/public/llm/: index.html
docs/static/: llms.txt
scripts/: build-backend-sidecar.py  csv-to-locales.mjs  json-to-csv.js  prepare-docs.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.react.conf.json  tauri.svelte.conf.json
src-tauri/src/: backend.rs  commands.rs  lib.rs
src-tauri/src/commands/: default.rs  storage.rs  workspace.rs
(+78 files in other folders)
